add travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ befere_install:
 
 script:
     - docker run -e CI=true 0xf0d0/docker-react yarn test -- --coverage
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-2-440722146424"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
